# hai606i_sudoku

./: .env.example  .gitignore  Cargo.toml  README.md  flamegraph_multi_threaded  flamegraph_single_threaded
.github/workflows/: auto_tests.yml  benchmark.yml  test on pull.yml  tests.yml  workflow.yml
migrations/2025-03-18-133617_simple_sudoku/: down.sql  up.sql
report/: Report.tex
res/sudoku_samples/: sudoku-2-testr3.txt  sudoku-3-10.txt  sudoku-3-11.txt  sudoku-3-12.txt  sudoku-3-13.txt  sudoku-3-14.txt  sudoku-3-15.txt  sudoku-3-16.txt  sudoku-3-17.txt  sudoku-3-18.txt  sudoku-3-19.txt  sudoku-3-20.txt  sudoku-3-21.txt  sudoku-3-22.txt  sudoku-3-23.txt  sudoku-3-24.txt  sudoku-3-25.txt  sudoku-3-26.txt  sudoku-3-27.txt  sudoku-3-28.txt  sudoku-3-29.txt  sudoku-3-30.txt  sudoku-3-31.txt  sudoku-3-32.txt  sudoku-3-33.txt  sudoku-3-34.txt  sudoku-3-35.txt  sudoku-3-36.txt  sudoku-3-37.txt  sudoku-3-38.txt  sudoku-3-39.txt  sudoku-3-4.txt  sudoku-3-40.txt  sudoku-3-41.txt  sudoku-3-42.txt  sudoku-3-43.txt  sudoku-3-44.txt  sudoku-3-45-1.txt  sudoku-3-46.txt  sudoku-3-47.txt  (+37 more)
src/: fill_database.rs  generation_benchmark.rs  lib.rs  main.rs  schema.rs
src/carpet_sudoku/: carpet.rs  carpet_generation.rs  mod.rs  pattern.rs  sudoku.rs
src/database/: db.rs  fill_database.rs  mod.rs  schema.rs
src/display/: button.rs  display.rs  mod.rs
src/simple_sudoku/: button.rs  display.rs  mod.rs  rules.rs  sudoku.rs  sudoku_generation.rs
src/sudoku/: mod.rs  simple_sudoku.rs  simple_sudoku_display.rs
src/tests/: carpet_sudoku_test.rs  mod.rs  simple_sudoku_test.rs
