[package]
name = "hai606i_sudoku"
version = "0.0.1"
edition = "2021"
default-run = "hai606i_sudoku"

[[bin]]
name = "fill_database"
path = "src/database/fill_database.rs"

[dependencies]
diesel = { version = "2.2.8", features = ["mysql"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
dotenv = "0.15.0"

env_logger = "0.11.6"
graph = "0.3.1"
log = "0.4.25"
macroquad = "0.4"
rand = "0.8.5"
