[package]
name = "hai606i_sudoku"
version = "0.0.1"
edition = "2021"
default-run = "hai606i_sudoku"

[[bin]]
required-features = ["database"]
name = "fill_database"
path = "src/fill_database.rs"

[[bin]]
name = "generation_benchmark"
path = "src/generation_benchmark.rs"

[dependencies]
diesel = { version = "2.2.8", features = ["postgres"], optional = true }
dotenv = { version = "0.15.0", optional = true }

env_logger = "0.11.8"
graph = "0.3.1"
log = "0.4.27"
macroquad = "0.4.14"
rand = "0.9.0"

[features]
database = ["diesel", "dotenv"]
